--- a/templates/profile.html
+++ b/templates/profile.html
@@ -33,13 +33,13 @@
                                     </button>
                                 </form>
                             </div>
-                            <div class="sidebar-item" >
+                            <!-- <div class="sidebar-item" >
                                 <form action="/read" style="width:100%">
                                     <button class="white long smallcaps-text" style="width:100%; color:black; border:0px">
                                         write
                                     </button>
                                 </form>
-                            </div>
+                            </div> -->
                             <div class="sidebar-item" >
                                 <form action="/vocab" style="width:100%">
                                     <button class="white long smallcaps-text" style="width:100%; color:black; border:0px">
