small fix for 'guest mode'

--- a/templates/home.html
+++ b/templates/home.html
@@ -53,7 +53,7 @@
                             <form action="/select+language">
                                 <div class="center-container" style="margin-top: 0px;">
                                     <button id='signup' class="long white equal" style="height: fit-content; border-color: #aaa; background:#fff">
-                                        <span style="color: #3066be">Get Started Now!</span>
+                                        <span style="color: #3066be">Guest Mode</span>
                                     </button>
                                 </div>
                             </form>
