--- a/templates/vocab.html
+++ b/templates/vocab.html
@@ -62,7 +62,6 @@
                                     <h2>{{ level.capitalize() }}</h2>
                                     <ul>
                                         {% for word in words %}
-                                            <li>
                                                 <input type="checkbox" name="selected_words" value="{{ word.word }}" id="{{ word.word }}">
                                                 <label for="{{ word.word }}">{{ word.word }}</label>
                                                 {% if word.pronunciation != "" %}
@@ -70,12 +69,13 @@
                                                     <button type="submit" name="delete" value="{{ word.word }}">Delete</button>
                                                 {% endif %}
                                                 <p>{{ word.sense }}</p>
-                                            </li>
                                         {% endfor %}
                                     </ul>
                                 {% endfor %}
                                 <select name="action">
                                     <option value="generate_story">Generate Story</option>
+                                    <option value="generate_email">Generate Email</option>
+                                    <option value="generate_newspaper">Generate Newspaper</option>
                                     <!-- other actions can be added here -->
                                 </select>
                                 <button type="submit" name="submit_action" value="execute_action">Submit</button>
@@ -90,7 +90,8 @@
                 <div style="flex-direction: column;">
                     <div class="left aligned column main-col" style="max-width: 800px; margin-top: 150px;">
                         <div class="center-container" id="text" style="text-align: left;">
-                            <h1 class="huge">Let's practice by exploring new stories that include these words!</h1>
+                            <h1 class="huge">Let's practice by exploring new stories that include these words! </h1>
+                            <h1 class="huge">Check the box to select a word</h1>
                         </div>
                     </div>
                 </div>
