changed logic for generating story, manually go to read

--- a/templates/language.html
+++ b/templates/language.html
@@ -109,6 +109,16 @@
                             </div>
                         </div>
                         {% endif %}
+                        <div style="flex-direction: column;">
+                            <div class="left aligned column main-col" style="max-width: 800px">
+                                <div class="center-container" id="text" style="text-align: left;">
+                                    <form action="/read" method="POST">
+                                        <button type="submit" name="generate" value="true" class="generate-button">Generate</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                        
                         </div>
                     </div>
                 </div>
