definition pops up, stories dynamically generated, number of times seen kept track of, still need to move and fix sqlite error

--- a/static/styles.css
+++ b/static/styles.css
@@ -259,6 +259,7 @@ span.inline {
     margin-bottom: 20px;
     display: inline-block;
     cursor: pointer;
+    font-size: large;
 }
 
 span.inline:hover {
