--- a/templates/vocab.html
+++ b/templates/vocab.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Include Bootstrap CSS (from CDN for simplicity) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -60,10 +61,28 @@
                     <div class="left aligned column main-col" style="max-width: 800px; margin-top: 150px;">
                         <div class="center-container" id="text" style="text-align: left;">
                             <h1 class="huge">Your Vocabulary List (Check the box to select a word)</h1>
-
+                            <div class="preamble-section" style="margin: 20px; padding: 20px; background-color: #f4f4f8; border-left: 5px solid #3066be;">
+                                <h2>What do these levels mean?</h2>
+                                <p>Hover on the <i style="font-size:24px" class="fa">&#xf059;</i>
+                                    symbol to read more about our <strong>spaced-repetition</strong> algorithm</p>
+                            </div>
                             <form action="/vocab" method="POST">
                                 {% for level, words in vocab.items() %}
-                                    <h2>{{ level.capitalize() }}</h2>
+                                    <h2>
+                                        <span>{{ level.capitalize() }}</span>
+                                        <span class="hoverel"><i style="font-size:24px;margin-left:auto" class="fa">&#xf059;
+                                            <div class="hovertext" style="text-align: left; padding: 5px 10px; font-size: medium;width:300px; background: #aaa;">
+                                                <p>The {{ level.capitalize() }} class represents one of the three levels of memorization that WordWeaver Tracks. </p>
+                                                <p>{% if level == "new" %}
+                                                    {{ level.capitalize() }} words are those words which you have only encountered 1-5 times. WordWeaver will automatically select a small percentage of these words unless you specifically select some that you want to encounter. The more recently you added the word, the more frequently it will appear!
+                                                    {% elif level == "familiar" %}  
+                                                    {{ level.capitalize() }} words are those words which you have encountered 5-10 times. WordWeaver will automatically select these words less often than new words unless you specifically select some that you want to encounter.
+                                                    {% elif level == "confident" %}  
+                                                    {{ level.capitalize() }} words are those words which you have encountered more than 10 times. WordWeaver will infrequently select these words unless you specifically select some that you want to encounter.
+                                                {% endif %}</p>
+                                            </div></i>
+                                        </span>
+                                    </h2>
                                     <ul>
                                         {% for word in words %}
                                                 <input type="checkbox" name="selected_words" value="{{ word.word }}" id="{{ word.word }}">
